--- a/.conf
+++ b/.conf
@@ -7,20 +7,20 @@ server {
 	client_max_body_size 0;
 
 	location / {
-		root	/workspace/default/;
+		root	./default/;
 		index index.html;
 		method	 POST GET;
 		autoindex off;
 	}
 
 	location /uploads {
-		root /workspace/default/uploads;
+		root ./default/uploads;
 		method POST GET DELETE;
-		upload /workspace/default/uploads;
+		upload ./default/uploads;
 	}
 
 	location /cgi-bin {
-		root	/workspace/default/cgi-bin;
+		root	./default/cgi-bin;
 		cgi	.php .py;
 		autoindex	on;
 		upload	on;
@@ -67,19 +67,19 @@ server {
 	client_max_body_size 50;
 
 	location / {
-		root	/workspace/default2;
+		root	./default2;
 		method GET;
 		index 	index.html;
 	}
 
 	location /uploads {
-		root /workspace/default2/uploads;
+		root ./default2/uploads;
 		method POST GET;
-		upload /workspace/default2/uploads;
+		upload ./default2/uploads;
 	}
 
 	location /cgi-bin {
-		root	/workspace/default2/cgi-bin;
+		root	./default2/cgi-bin;
 		cgi	.php .py;
 		autoindex	off;
 		upload	on;
@@ -87,7 +87,7 @@ server {
 	}
 
 	location /newsite {
-		return 302 ;
+		return 302 "http://localhost:7778";
 	}
 }
 
@@ -97,27 +97,27 @@ server {
 
 	server_name c d;
 
-	error_page 400 402 403 404 405 406 408 409 410 411 413 414 415 417 426 500 501 502 503 504 505 /workspace/default/custom_error.txt;
+	error_page 400 402 403 404 405 406 408 409 410 411 413 414 415 417 426 500 501 502 503 504 505 ./default/custom_error.txt;
 
 	client_max_body_size 5;
 
 	location / {
-		root	/workspace/default3/;
+		root	./default3/;
 		index index.html;
 		method	GET;
 		autoindex off;
 	}
 
 	location /cgi-bin {
-		root	/workspace/default3/cgi-bin/;
+		root	./default3/cgi-bin/;
 		cgi	.php .py;
 		method POST GET;
 	}
 
 	location /uploads {
-		root /workspace/default3/uploads;
+		root ./default3/uploads;
 		method POST GET DELETE;
-		upload /workspace/default3/uploads;
+		upload ./default3/uploads;
 	}
 }
 
